# rocket-oauth-jwt-demo

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/auth/: keyring.rs  mod.rs
src/auth/keyring/: tests.rs
src/examples/: gen-key.rs  keyring.rs
src/google/: mod.rs  tests.rs
src/models/: google.rs  jwt.rs  mod.rs
src/routes/: catchers.rs  mod.rs  oauth.rs
static/: index.js
static/js/: index.js
templates/: base.html.tera  index.html.tera  login.html.tera
templates/errors/oauth/: 400.html.tera  500.html.tera
